--- a/app/src/main/res/layout/activity_exersices.xml
+++ b/app/src/main/res/layout/activity_exersices.xml
@@ -4,13 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Exersices">
+    tools:context=".adminexersices">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Exercises"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="238dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/buttonbegin"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="200dp"
+            android:background="#66ADE6"
+            android:text="beginners"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"/>
+
+        <Button
+            android:id="@+id/buttoninter"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="#66ADE6"
+            android:text="intermediate"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"/>
+
+        <Button
+            android:id="@+id/buttonhigh"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="#66ADE6"
+            android:text="high intensity"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
